--- a/Projeto Gamedev Alura/index.html
+++ b/Projeto Gamedev Alura/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/addons/p5.sound.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/addons/p5.sound.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
+
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 
   </head>
-  <body>
+  <body>	  
     <script src="scripts/jogo/personagem.js"></script>
     <script src="scripts/jogo/cenario.js"></script>
     <script src="sketch.js"></script>
